syntax = "proto3";

option csharp_namespace = "TestGrpc";

package todoit;

service ToDoIt  {
  // Create
  rpc CreateDoTo(CreateToDoRequest) returns (CreateToToResponse){}

  // Read single
  rpc ReadTodo(ReadToDoRequest) returns (ReadToDoresponse){}

  // Read list
  rpc ListTodo(GetAllRequest) returns (GetAllResponse){}

  // Edit/Update
  rpc UpdateToDo(UpdateToDoRequest) returns (UpdateToDoResponse){}

  // Delete
  rpc DeleteToDo(DeleteToDoRequest) returns (DeleteToDoResponse){}
}

message CreateToDoRequest {
  string title = 1;
  string description = 2;
}

message CreateToToResponse {
  int32 id = 1;
}

message ReadToDoRequest {
  int32 id = 1;
}

message ReadToDoresponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string to_do_status = 4; // notice snake casing
}

message GetAllRequest {}

message GetAllResponse {
  repeated ReadToDoresponse  to_do = 1;
}

message UpdateToDoRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string to_do_status = 4;
}

message UpdateToDoResponse {
  int32 id = 1;
}

message DeleteToDoRequest {
  int32 id = 1;
}

message DeleteToDoResponse {
  int32 id = 1;
}
